--- a/Group_29_Visual_Timebased.ipynb
+++ b/Group_29_Visual_Timebased.ipynb
@@ -180,7 +180,9 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "\n",
+    "import time\n",
+    "# 测试注释\n",
+    "# 测试\n",
     "df=pd.read_csv('fake_transactional_data_24.csv')\n",
     "df['not_happened_yet_date']=pd.to_datetime(df['not_happened_yet_date'])\n",
     "df['day_of_week']=df['not_happened_yet_date'].dt.dayofweek\n",
