--- a/code/formal/preliminary_processing/Dataset_fixed.ipynb
+++ b/code/formal/preliminary_processing/Dataset_fixed.ipynb
@@ -358,7 +358,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('fixed_simulated_transaction_2024.csv')"
+    "df.to_csv('fixed_simulated_transaction_2024.csv',index=False)"
    ]
   }
  ],
