Small issue fixed

--- a/code/formal/preliminary_processing/Dataset_fixed.ipynb
+++ b/code/formal/preliminary_processing/Dataset_fixed.ipynb
@@ -285,6 +285,7 @@
     "class_df=pd.read_excel('class2.xlsx').iloc[:,[0,2]]\n",
     "class_df.columns=['Name','Number']\n",
     "class_df['Name']=class_df['Name'].str.replace(\"' \",'')\n",
+    "class_df.iloc[4,0]=class_df.iloc[4,0].replace(' ','')\n",
     "class_df=class_df.set_index('Name')\n",
     "class_df['Class']=class_df.replace({'Number':EN_dict})\n",
     "class_dict=class_df.to_dict()\n",
@@ -314,9 +315,9 @@
       " 3   Amount                  230596 non-null  float64\n",
       " 4   Third Party Account No  6832 non-null    float64\n",
       " 5   Third Party Name        223517 non-null  object \n",
-      " 6   Classification Number   223517 non-null  object \n",
+      " 6   Classification Number   223517 non-null  float64\n",
       " 7   Classification Title    223517 non-null  object \n",
-      "dtypes: float64(4), object(4)\n",
+      "dtypes: float64(5), object(3)\n",
       "memory usage: 14.1+ MB\n",
       "None\n"
      ]
