Small issue fixed

--- a/code/formal/preliminary_processing/Dataset_fixed.ipynb
+++ b/code/formal/preliminary_processing/Dataset_fixed.ipynb
@@ -108,7 +108,7 @@
     "    temp_df['before']=df['Timestamp'].shift(1)\n",
     "    temp_df['after']=df['Timestamp'].shift(-1)\n",
     "    temp_df['mean']=temp_df.mean(axis=1,skipna=True,numeric_only=False)\n",
-    "    df['Timestamp']=df['Timestamp'].fillna(temp_df.mean)"
+    "    df['Timestamp']=df['Timestamp'].fillna(temp_df['mean'])"
    ]
   },
   {
@@ -307,17 +307,17 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 230596 entries, 0 to 230595\n",
       "Data columns (total 8 columns):\n",
-      " #   Column                  Non-Null Count   Dtype  \n",
-      "---  ------                  --------------   -----  \n",
-      " 0   Timestamp               230596 non-null  object \n",
-      " 1   Account No              230594 non-null  float64\n",
-      " 2   Balance                 230596 non-null  float64\n",
-      " 3   Amount                  230596 non-null  float64\n",
-      " 4   Third Party Account No  6832 non-null    float64\n",
-      " 5   Third Party Name        223517 non-null  object \n",
-      " 6   Classification Number   223517 non-null  float64\n",
-      " 7   Classification Title    223517 non-null  object \n",
-      "dtypes: float64(5), object(3)\n",
+      " #   Column                  Non-Null Count   Dtype         \n",
+      "---  ------                  --------------   -----         \n",
+      " 0   Timestamp               230596 non-null  datetime64[ns]\n",
+      " 1   Account No              230594 non-null  float64       \n",
+      " 2   Balance                 230596 non-null  float64       \n",
+      " 3   Amount                  230596 non-null  float64       \n",
+      " 4   Third Party Account No  6832 non-null    float64       \n",
+      " 5   Third Party Name        223517 non-null  object        \n",
+      " 6   Classification Number   223517 non-null  float64       \n",
+      " 7   Classification Title    223517 non-null  object        \n",
+      "dtypes: datetime64[ns](1), float64(5), object(2)\n",
       "memory usage: 14.1+ MB\n",
       "None\n"
      ]
